Avant les premiers changmts responsive

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -24,6 +24,8 @@
 {% block relbar2 %}{% endblock %}
 
 {% block extrahead %}
+  <!-- BETA responsive -->
+  <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian BESSON (lbesson.bitbucket.org)" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen" />
   <!-- Dublin Core Metadata -->
