Presque convenable ? A tester demain sur un vrai téléphone, devrait être mieux§.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -299,7 +299,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
    setTimeout(function(){ NProgress.done(); }, 1000);
    if (screen.width > 680) {
      setTimeout(function(){ noty({
-      text: 'Cette page vous paraît-elle bien écrite ?', timeout: false, layout: "bottomRight",
+      text: 'Cette page vous paraît-elle bien écrite ?', timeout: false,
       buttons: [ // this = button element, $noty = $noty element
         {addClass: 'btn btn-primary', text: 'Oui !', onClick: function($noty) {
             $noty.close();
