--- a/.templates/sidebar_gpg.en.html
+++ b/.templates/sidebar_gpg.en.html
@@ -9,12 +9,12 @@
 #}
 <h3>My public PGP key</h3>
 <ul class="this-page-menu">
- <li>On the MIT server:
+ <li><font style="font-size: 75%;">On the MIT server</font>
   <a class="reference external image-reference" title="pgp.mit.edu:11371/pks" 
    href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x01AACDB9C108F8A0">
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
   </a></li>
- <li>On this site:
+ <li><font style="font-size: 75%;">On this site</font>
   <a class="reference external image-reference" title="key.asc" 
      href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
