--- a/.templates/linkpdf.en.html
+++ b/.templates/linkpdf.en.html
@@ -12,14 +12,14 @@
   <img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
          src="{{ pathto('_images/.en.gif', true)|e }}" alt="Page in English" /></a>
 </div>
-<div id="google_translate_element"></div>
+<!--<div id="google_translate_element"></div>
 <script type="text/javascript">
 if (window.location.hostname == 'perso.crans.org'){
  console.log("[GoogleTranslate] Initializing the translation plug-in...");
  function googleTranslateElementInit() {
    new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
  };};
-</script>
+</script>-->
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <h3>My résumé in PDF ?</h3>
 <ul class="this-page-menu">
