--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -19,8 +19,8 @@ if (window.location.hostname == 'perso.crans.org'){
  function googleTranslateElementInit() {
    new google.translate.TranslateElement({pageLanguage: 'fr', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
  };};
-</script>-->
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
 <h3>Mon CV en PDF ?</h3>
 <ul class="this-page-menu">
  <li><a style="text-decoration: underline" href="cv.pdf" title="Mon CV en PDF !"
