--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -33,7 +33,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
-    <meta name="DC.Date" content="2014-01-25" />
+    <meta name="DC.Date" content="2014-01-31" />
   <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site"
@@ -41,7 +41,7 @@
   <link rel="shortcut icon" type="image/png"
         href="{{ pathto('_static/.besson.png', true)|e }}" />
   <!-- BETA responsive -->
-  <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}"> <!-- CSS for forkit.js -->
+  <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}">
   <link rel="stylesheet" href="{{ pathto('_static/buttons.css', true)|e }}">
   <link rel="stylesheet" href="{{ pathto('_static/nprogress.css', true)|e }}">
   <link rel="stylesheet" href="{{ pathto('_static/hacks.css', true)|e }}">
@@ -54,7 +54,7 @@
   <!-- Forkit.js (http://hakim.se/lab/forkit.js)-->
    <script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
   <!-- vein.js (https://github.com/israelidanny/veinjs)-->
-   <script type="text/javascript" src="{{ pathto('_static/vein.js', true)|e }}"></script>
+   <!--<script type="text/javascript" src="{{ pathto('_static/vein.js', true)|e }}"></script>-->
 <script type="text/javascript">
  if (typeof console !== 'undefined') { console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit..."); };
  /* jQuery.noty plugin */
@@ -71,7 +71,7 @@
         },
         timeout: false, // delay for closing event. Set false for sticky notifications
         force: true, // adds notification to the beginning of queue when set to true
-        modal: false, maxVisible: 9, // you can set max visible notification for dismissQueue true option
+        modal: false, maxVisible: 12, // you can set max visible notification for dismissQueue true option
         closeWith: ['click'], // ['click', 'button', 'hover']
         callback: {
             onShow: function() {},
@@ -208,15 +208,15 @@ console.log("[INFO] Starting main JS content when document will be ready ! (C) L
  Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="index.html";});    
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "29 01 2014, 00h:30m:14s";
-    var day   = last_updated_value.substring(0,  2 ) || "29";
+   var last_updated_value = "{{ last_updated }}" || "31 01 2014, 00h:30m:14s";
+    var day   = last_updated_value.substring(0,  2 ) || "31";
     var month = last_updated_value.substring(3,  6 ) || "01"; // FIXME convert Sep -> 09, Oct -> 10 ect...
     var year  = last_updated_value.substring(7,  11) || "2014";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
     var secs  = last_updated_value.substring(21, 23) || "00";
    alert(" Cette page a été générée le " + last_updated_value
-    + "</br></br>\nSoit <span style=\"font-weight:bold\">" + jQuery.timeago( year + "-" + month + "-" + day + "T" + hours + ":" + mins + ":" + secs + "+02:00") + "</span>"
+    + "</br></br>\nSoit <b>" + jQuery.timeago( year + "-" + month + "-" + day + "T" + hours + ":" + mins + ":" + secs + "+02:00") + "</b>"
     + ".</br></br>\n(C) Lilian BESSON 2011-2014.</br>\n Merci au plugin jQuery.TimeAgo pour le calcul!", {layout:'center', type:'success'});
  });{% endif %}
 // Put here all JS code, and its dependencies before.
@@ -236,7 +236,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 <br>{% include "geekcode.en.html" %}
 <div id="supportBadges"><ul>
 <li><a class="image-reference" title="Firefox" href="http://www.mozilla.org/en-US/firefox/all/">
- <img alt="Optimized for Firefox, tested on Firefox 25.0.1"
+ <img alt="Optimized for Firefox, tested on Firefox 26.0"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Google Analytics" href="http://www.google.com/analytics/">
@@ -315,19 +315,19 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
    // BETA experimentation to dynamically change the color stylesheet.
    if (screen.width > 680) { // BETA responsive
      Mousetrap.bind(["s", "S"], function() { noty({
-      text: 'Changer le <i>style</i> ?</br><small>(Cette fonctionnalité est toujours en bêta)</small>', timeout: false,
+      text: 'Changer le <i>style</i> ?</br>(Cette fonctionnalité est toujours en bêta)', timeout: false,
       layout: 'center', type: 'info',
       buttons: [ // this = button element, $noty = $noty element
         {addClass: 'btn btn-info', text: "Non", onClick: function($noty) {
             $noty.close();
-            noty({text: "Le style vous plaît déjà ? Ravi de l'apprendre !", timeout: "5s"});
+            noty({text: "Le style vous plaît déjà ? Ravi de l'apprendre !", timeout: 2000});
             $("head").append(
              $("<link/>", {href: "{{ pathto('_static/default.css', true)|e }}", rel: "stylesheet"})
             );
           }}, 
         {addClass: 'btn btn-success', text: 'En vert !', onClick: function($noty) {
             $noty.close();
-            noty({text: "<b>Il va faire tout vert !</b></br><small>Ta gueule !</small>", timeout: "5s"});
+            noty({text: "<b>Il va faire tout vert !</b></br><small>Ta gueule !</small>", timeout: 2000});
             $("head").append(
              $("<link/>", {href: "{{ pathto('_static/green.css', true)|e }}", rel: "stylesheet"})
             );
@@ -335,7 +335,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
           }}, 
         {addClass: 'btn btn-warning', text: 'En orange !', onClick: function($noty) {
             $noty.close();
-            noty({text: "<b>Il va faire tout orange !</b></br><small>Ta gueule !</small>", timeout: "5s"});
+            noty({text: "<b>Il va faire tout orange !</b></br><small>Ta gueule !</small>", timeout: 2000});
             $("head").append(
              $("<link/>", {href: "{{ pathto('_static/orange.css', true)|e }}", rel: "stylesheet"})
             );
