--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -8,27 +8,16 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if show_source and has_source and sourcename %}
-<h3>Mon CV en Français ?</h3>
+<h3>Mon CV français ?</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.fr.html" title="French version"
          rel="nofollow">Lisez-le en français</a>, en HTML.</li>
 </ul>
-<div id="google_translate_element"></div>
-<script type="text/javascript">
-if (window.location.hostname == 'perso.crans.org'){
- console.log("[GoogleTranslate] Initializing the translation plug-in...");
- function googleTranslateElementInit() {
-   new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-38514290-1'}, 'google_translate_element');
- };};	
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <h3>My résumé in PDF</h3>
 <ul class="this-page-menu">
-  <li><a style="text-decoration: underline" href="cv.pdf" title="PDF English version"
-         rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex.</li></br></br>
-  <li><a style="text-decoration: underline" href="cv.fr.pdf" title="PDF French version, from rST"
-         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French.</li></br>
-  <li><a style="text-decoration: underline" href="cv.en.pdf" title="PDF English version, from rST"
-         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English.</li></br>
+  <li><a style="text-decoration: underline" href="cv.en.pdf" title="PDF English version"
+         rel="nofollow">See the English PDF version</a>, compiled from LaTeX with pdflatex.</li></br>
+  <li><a style="text-decoration: underline" href="cv.fr.pdf" title="PDF French version"
+         rel="nofollow">See the French PDF version</a>, compiled from LaTeX with pdflatex.</li></br>
 </ul>
 {%- endif %}
